Nome do projeto foi modificado

--- a/git-fullstack.html
+++ b/git-fullstack.html
@@ -7,7 +7,8 @@
   <title>Primeiro projeto repositorio DIO</title>
 </head>
 <body>
-  <h1>Projeto de repositorio</h1>
+  <h1>Projeto de repositorio DIO fullstack</h1>
+  <h2>Projeto Github Marcus Vinicius</h2>
   <h2>Projeto Github</h2>
 </body>
 </html>
