--- a/git-primeiro-projeto.html
+++ b/git-primeiro-projeto.html
@@ -7,7 +7,7 @@
   <title>Primeiro projeto repositorio DIO</title>
 </head>
 <body>
-  <h1>Primeiro projeto de repositorio Dio fullstack Santander Github</h1>
+  <h1>Primeiro projeto de repositorio Dio fullstack Santander</h1>
   <p>Este projeto tem a intenção de aperfeiçoar o uso do repositorio Github</p>
 </body>
 </html>
